# distributed-and-cloud-computing-practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: resource.rc  resource.res
dependencies/: CMakeLists.txt
dependencies/stb-image/include/: stb_image.h
dependencies/stb-image/src/: stb_image.cpp
src/: App.cpp  App.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  ColorPulse.cpp  Event.hpp  IRenderable.cpp  Image.hpp  Lab.cpp  Stopwatch.cpp  Task.cpp  UI.cpp  UI.hpp  Window.cpp  WindowExt.cpp  WindowExt.hpp  debug.hpp  fileDialog.cpp  integrate.cpp  labs.cpp  main.cpp  omp-utils.cpp
src/Frontend/: Base.hpp  Canvas.cpp  Canvas.hpp  UINode.cpp  UINode.hpp  WindowExt.cpp  WindowExt.hpp
src/include/: ColorPulse.hpp  IRenderable.hpp  Lab.hpp  Stopwatch.hpp  Task.hpp  Window.hpp  integrate.hpp  labs.hpp  omp-utils.hpp  pie.hpp  tasks.hpp
src/include/lab-1/: tasks.hpp
src/include/lab-2/: tasks.hpp
src/include/lab-3/: tasks.hpp
src/include/lab-4/: tasks.hpp
src/include/lab-5/: tasks.hpp
src/include/lab-6/: tasks.hpp
src/lab-1/: task.cpp
src/lab-2/: task1.cpp  task2.cpp  task3.cpp
src/lab-3/: task.cpp
src/lab-4/: task.cpp
src/lab-5/: task1.cpp  task2.cpp
src/lab-6/: task.cpp
trash-bin/: Event.hpp  parsing.hpp
